Added my github links

--- a/index.html
+++ b/index.html
@@ -452,21 +452,13 @@
                     <p class="text-gray-400 text-center mb-8">Connect with me on social media or check out my work on
                         code platforms.</p>
                     <div class="grid grid-cols-2 gap-4">
-                        <a href="#"
+                        <a href="https://github.com/WorldBuilder21/"
                             class="bg-dark border border-border text-white py-3 px-4 rounded-lg text-center font-medium flex items-center justify-center hover:border-primary transition duration-300">
                             GitHub
                         </a>
                         <a href="#"
                             class="bg-dark border border-border text-white py-3 px-4 rounded-lg text-center font-medium flex items-center justify-center hover:border-primary transition duration-300">
                             LinkedIn
-                        </a>
-                        <a href="#"
-                            class="bg-dark border border-border text-white py-3 px-4 rounded-lg text-center font-medium flex items-center justify-center hover:border-primary transition duration-300">
-                            Twitter
-                        </a>
-                        <a href="#"
-                            class="bg-dark border border-border text-white py-3 px-4 rounded-lg text-center font-medium flex items-center justify-center hover:border-primary transition duration-300">
-                            Instagram
                         </a>
                     </div>
                 </div>
@@ -480,10 +472,9 @@
                 <div class="text-3xl font-bold mb-6">DENIS AGGYRATUS</div>
                 <p class="text-gray-400 text-sm mb-6">Full Stack Developer & Flutter Specialist</p>
                 <div class="flex space-x-6 mb-8">
-                    <a href="#" class="text-gray-400 hover:text-primary transition-colors">GitHub</a>
+                    <a href="https://github.com/WorldBuilder21/"
+                        class="text-gray-400 hover:text-primary transition-colors">GitHub</a>
                     <a href="#" class="text-gray-400 hover:text-primary transition-colors">LinkedIn</a>
-                    <a href="#" class="text-gray-400 hover:text-primary transition-colors">Twitter</a>
-                    <a href="#" class="text-gray-400 hover:text-primary transition-colors">Instagram</a>
                 </div>
                 <p class="text-gray-400 text-sm">© 2025 Denis Aggyratus Demitrus. All rights reserved.</p>
             </div>
