Removed the 'View Project', added the ability to open links in a new tab and included that i worked with teams mates in different projects.

--- a/index.html
+++ b/index.html
@@ -151,10 +151,7 @@
                         <span class="bg-card px-4 py-2 rounded-full text-sm">Order Tracking</span>
                     </div>
                     <div class="flex gap-4">
-                        <a href="#"
-                            class="bg-primary text-white py-2 px-6 rounded-lg transition hover:bg-opacity-90">View
-                            Project</a>
-                        <a href="#"
+                        <a href="https://github.com/WorldBuilder21/Bite-Line" target="_blank" rel="noopener noreferrer"
                             class="border border-primary text-primary py-2 px-6 rounded-lg transition hover:bg-primary hover:bg-opacity-10">GitHub</a>
                     </div>
                 </div>
@@ -183,10 +180,8 @@
                         <span class="bg-card px-4 py-2 rounded-full text-sm">Real-time Chat</span>
                     </div>
                     <div class="flex gap-4">
-                        <a href="#"
-                            class="bg-primary text-white py-2 px-6 rounded-lg transition hover:bg-opacity-90">View
-                            Project</a>
-                        <a href="https://github.com/WorldBuilder21/melody_meet"
+                        <a href="https://github.com/WorldBuilder21/melody_meet" target="_blank"
+                            rel="noopener noreferrer"
                             class="border border-primary text-primary py-2 px-6 rounded-lg transition hover:bg-primary hover:bg-opacity-10">GitHub</a>
                     </div>
                 </div>
@@ -207,6 +202,7 @@
                         find study groups, and navigate campus facilities. The app features real-time messaging, event
                         calendars,
                         campus maps, and a resource sharing platform.
+                        <span class="block mt-2 text-primary">Developed as part of a collaborative team project.</span>
                     </p>
                     <div class="flex flex-wrap gap-3 mb-6">
                         <span class="bg-card px-4 py-2 rounded-full text-sm">Social Networking</span>
@@ -215,10 +211,8 @@
                         <span class="bg-card px-4 py-2 rounded-full text-sm">Resource Sharing</span>
                     </div>
                     <div class="flex gap-4">
-                        <a href="#"
-                            class="bg-primary text-white py-2 px-6 rounded-lg transition hover:bg-opacity-90">View
-                            Project</a>
-                        <a href="https://github.com/WorldBuilder21/Campus_connect"
+                        <a href="https://github.com/WorldBuilder21/Campus_connect" target="_blank"
+                            rel="noopener noreferrer"
                             class="border border-primary text-primary py-2 px-6 rounded-lg transition hover:bg-primary hover:bg-opacity-10">GitHub</a>
                     </div>
                 </div>
@@ -238,12 +232,11 @@
                             An educational resource sharing platform for university students. Allows students to share
                             notes, study materials,
                             past papers, and course insights with peers.
+                            <span class="block mt-2 text-primary">Created as a team project with fellow
+                                developers.</span>
                         </p>
                         <div class="flex gap-3">
-                            <a href="#"
-                                class="bg-primary text-white py-2 px-4 rounded-lg text-sm transition hover:bg-opacity-90">View
-                                Project</a>
-                            <a href="https://github.com/nana-ntim/Unishare"
+                            <a href="https://github.com/nana-ntim/Unishare" target="_blank" rel="noopener noreferrer"
                                 class="border border-primary text-primary py-2 px-4 rounded-lg text-sm transition hover:bg-primary hover:bg-opacity-10">GitHub</a>
                         </div>
                     </div>
@@ -261,12 +254,15 @@
                             An agricultural technology solution designed to help farmers monitor crop health, identify
                             plant diseases,
                             predict weather patterns, and optimize farming practices.
+                            <span class="block mt-2 text-primary">Developed in collaboration with a team of developers
+                                and agricultural experts.</span>
                         </p>
                         <div class="flex gap-3">
-                            <a href="https://www.youtube.com/watch?v=24pn_CPyFLo"
+                            <a href="https://www.youtube.com/watch?v=24pn_CPyFLo" target="_blank"
+                                rel="noopener noreferrer"
                                 class="bg-primary text-white py-2 px-4 rounded-lg text-sm transition hover:bg-opacity-90">YouTube
                                 Demo</a>
-                            <a href="https://github.com/nana-ntim/FarmSafe"
+                            <a href="https://github.com/nana-ntim/FarmSafe" target="_blank" rel="noopener noreferrer"
                                 class="border border-primary text-primary py-2 px-4 rounded-lg text-sm transition hover:bg-primary hover:bg-opacity-10">GitHub</a>
                         </div>
                     </div>
@@ -452,7 +448,7 @@
                     <p class="text-gray-400 text-center mb-8">Connect with me on social media or check out my work on
                         code platforms.</p>
                     <div class="grid grid-cols-2 gap-4">
-                        <a href="https://github.com/WorldBuilder21/"
+                        <a href="https://github.com/WorldBuilder21/" target="_blank" rel="noopener noreferrer"
                             class="bg-dark border border-border text-white py-3 px-4 rounded-lg text-center font-medium flex items-center justify-center hover:border-primary transition duration-300">
                             GitHub
                         </a>
@@ -472,7 +468,7 @@
                 <div class="text-3xl font-bold mb-6">DENIS AGGYRATUS</div>
                 <p class="text-gray-400 text-sm mb-6">Full Stack Developer & Flutter Specialist</p>
                 <div class="flex space-x-6 mb-8">
-                    <a href="https://github.com/WorldBuilder21/"
+                    <a href="https://github.com/WorldBuilder21/" target="_blank" rel="noopener noreferrer"
                         class="text-gray-400 hover:text-primary transition-colors">GitHub</a>
                     <a href="#" class="text-gray-400 hover:text-primary transition-colors">LinkedIn</a>
                 </div>
