Include the website to the Bite-line section

--- a/index.html
+++ b/index.html
@@ -148,11 +148,14 @@
                         <span class="bg-card px-4 py-2 rounded-full text-sm">Cross-Platform</span>
                         <span class="bg-card px-4 py-2 rounded-full text-sm">Real-time Updates</span>
                         <span class="bg-card px-4 py-2 rounded-full text-sm">Secure Payments</span>
+                        <span class="bg-card px-4 py-2 rounded-full text-sm">Push Notifications</span>
                         <span class="bg-card px-4 py-2 rounded-full text-sm">Order Tracking</span>
                     </div>
                     <div class="flex gap-4">
                         <a href="https://github.com/WorldBuilder21/Bite-Line" target="_blank" rel="noopener noreferrer"
                             class="border border-primary text-primary py-2 px-6 rounded-lg transition hover:bg-primary hover:bg-opacity-10">GitHub</a>
+                        <a href="https://bite-line-landing-page.vercel.app/" target="_blank" rel="noopener noreferrer"
+                            class="bg-primary text-white py-2 px-4 rounded-lg text-sm transition hover:bg-opacity-90">Website</a>
                     </div>
                 </div>
             </div>
