Added the php to the tech stack, changed the icon to be more relevant

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Denis Aggyratus Demitrus | Developer Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/@heroicons/v2/24/outline/index.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script>
         tailwind.config = {
             theme: {
@@ -334,52 +336,57 @@
             <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-6 mt-8">
                 <div
                     class="bg-card rounded-xl p-6 flex flex-col items-center justify-center text-center shadow-xl transition-transform duration-300 hover:-translate-y-2">
-                    <div class="text-4xl mb-4">≫</div>
+                    <i class="fas fa-mobile-alt text-4xl text-primary mb-4"></i>
                     <h3 class="text-lg font-semibold">Flutter</h3>
                 </div>
                 <div
                     class="bg-card rounded-xl p-6 flex flex-col items-center justify-center text-center shadow-xl transition-transform duration-300 hover:-translate-y-2">
-                    <div class="text-4xl mb-4">⚛</div>
+                    <i class="fab fa-react text-4xl text-primary mb-4"></i>
                     <h3 class="text-lg font-semibold">React</h3>
                 </div>
                 <div
                     class="bg-card rounded-xl p-6 flex flex-col items-center justify-center text-center shadow-xl transition-transform duration-300 hover:-translate-y-2">
-                    <div class="text-4xl mb-4">☁</div>
+                    <i class="fas fa-bolt text-4xl text-primary mb-4"></i>
                     <h3 class="text-lg font-semibold">Supabase</h3>
                 </div>
                 <div
                     class="bg-card rounded-xl p-6 flex flex-col items-center justify-center text-center shadow-xl transition-transform duration-300 hover:-translate-y-2">
-                    <div class="text-4xl mb-4">🔥</div>
+                    <i class="fas fa-fire text-4xl text-primary mb-4"></i>
                     <h3 class="text-lg font-semibold">Firebase</h3>
                 </div>
                 <div
                     class="bg-card rounded-xl p-6 flex flex-col items-center justify-center text-center shadow-xl transition-transform duration-300 hover:-translate-y-2">
-                    <div class="text-4xl mb-4">㏜</div>
+                    <i class="fas fa-database text-4xl text-primary mb-4"></i>
                     <h3 class="text-lg font-semibold">SQL</h3>
                 </div>
                 <div
                     class="bg-card rounded-xl p-6 flex flex-col items-center justify-center text-center shadow-xl transition-transform duration-300 hover:-translate-y-2">
-                    <div class="text-4xl mb-4">🐍</div>
+                    <i class="fab fa-python text-4xl text-primary mb-4"></i>
                     <h3 class="text-lg font-semibold">Python</h3>
                 </div>
                 <div
                     class="bg-card rounded-xl p-6 flex flex-col items-center justify-center text-center shadow-xl transition-transform duration-300 hover:-translate-y-2">
-                    <div class="text-4xl mb-4">☕</div>
+                    <i class="fab fa-java text-4xl text-primary mb-4"></i>
                     <h3 class="text-lg font-semibold">Java</h3>
                 </div>
                 <div
                     class="bg-card rounded-xl p-6 flex flex-col items-center justify-center text-center shadow-xl transition-transform duration-300 hover:-translate-y-2">
-                    <div class="text-4xl mb-4">JS</div>
+                    <i class="fab fa-js text-4xl text-primary mb-4"></i>
                     <h3 class="text-lg font-semibold">TypeScript</h3>
                 </div>
                 <div
                     class="bg-card rounded-xl p-6 flex flex-col items-center justify-center text-center shadow-xl transition-transform duration-300 hover:-translate-y-2">
-                    <div class="text-4xl mb-4">■</div>
+                    <i class="fab fa-node-js text-4xl text-primary mb-4"></i>
                     <h3 class="text-lg font-semibold">Node.js</h3>
                 </div>
                 <div
                     class="bg-card rounded-xl p-6 flex flex-col items-center justify-center text-center shadow-xl transition-transform duration-300 hover:-translate-y-2">
-                    <div class="text-4xl mb-4">◆</div>
+                    <i class="fab fa-php text-4xl text-primary mb-4"></i>
+                    <h3 class="text-lg font-semibold">PHP</h3>
+                </div>
+                <div
+                    class="bg-card rounded-xl p-6 flex flex-col items-center justify-center text-center shadow-xl transition-transform duration-300 hover:-translate-y-2">
+                    <i class="fas fa-leaf text-4xl text-primary mb-4"></i>
                     <h3 class="text-lg font-semibold">MongoDB</h3>
                 </div>
             </div>
