--- a/index.html
+++ b/index.html
@@ -457,15 +457,15 @@
                     <h3 class="text-xl font-semibold text-center mb-4">Social Profiles</h3>
                     <p class="text-gray-400 text-center mb-8">Connect with me on social media or check out my work on
                         code platforms.</p>
-                    <div class="grid grid-cols-2 gap-4">
+                    <div class="flex flex-col gap-4">
                         <a href="https://github.com/WorldBuilder21/" target="_blank" rel="noopener noreferrer"
                             class="bg-dark border border-border text-white py-3 px-4 rounded-lg text-center font-medium flex items-center justify-center hover:border-primary transition duration-300">
                             GitHub
                         </a>
-                        <a href="#"
+                        <!-- <a href="#"
                             class="bg-dark border border-border text-white py-3 px-4 rounded-lg text-center font-medium flex items-center justify-center hover:border-primary transition duration-300">
                             LinkedIn
-                        </a>
+                        </a> -->
                     </div>
                 </div>
             </div>
@@ -480,7 +480,7 @@
                 <div class="flex space-x-6 mb-8">
                     <a href="https://github.com/WorldBuilder21/" target="_blank" rel="noopener noreferrer"
                         class="text-gray-400 hover:text-primary transition-colors">GitHub</a>
-                    <a href="#" class="text-gray-400 hover:text-primary transition-colors">LinkedIn</a>
+                    <!-- <a href="#" class="text-gray-400 hover:text-primary transition-colors">LinkedIn</a> -->
                 </div>
                 <p class="text-gray-400 text-sm">© 2025 Denis Aggyratus Demitrus. All rights reserved.</p>
             </div>
